# Vantage-HunyuanFoley

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
src/: LICENSE  NOTICE
src/example_workflows/: Hunyuan-Foley.json
src/hunyuanvideo_foley/models/dac_vae/model/: __init__.py
src/hunyuanvideo_foley/models/dac_vae/nn/: layers.py
src/hunyuanvideo_foley/models/synchformer/: ast_model.py  motionformer.py
src/hunyuanvideo_foley/utils/: feature_utils.py  model_utils.py
