[project]
name = "ComfyUI-HunyuanFoley"
description = "A ComfyUI custom node for generating high-fidelity, synchronized foley audio for any video, powered by Tencent’s HunyuanVideo-Foley model. This node integrates seamlessly into ComfyUI, delivering precise, realistic sound effects that align with on-screen actions—perfect for enhancing video projects with immersive audio."
version = "0.1.0"
license = {file = "LICENSE"}

classifiers = ["Environment :: GPU :: NVIDIA CUDA"]

dependencies = ["diffusers", "timm", "transformers>=4.49.0", "descript-audiotools", "omegaconf"]

[project.urls]
Repository = "https://github.com/vantagewithai/ComfyUI-HunyuanFoley"
"Bug Tracker" = "https://github.com/vantagewithai/ComfyUI-HunyuanFoley/issues"

[tool.comfy]
PublisherId = "vantagewithai"
DisplayName = "ComfyUI-HunyuanFoley"
Icon = ""



